// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spinner component Spinner snapshot test should render correctly as default 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-gjgjzp r-justifyContent-1777fci"
  dir={null}
  style={
    {
      "backgroundColor": "rgba(231,236,239,1.00)",
      "height": "24px",
      "maxHeight": "24px",
      "maxWidth": "24px",
      "minHeight": "24px",
      "minWidth": "24px",
      "width": "24px",
    }
  }
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    style={
      {
        "transform": "rotate(0deg)",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        style={
          {
            "color": "rgba(0,127,255,1.00)",
            "fontFamily": "alldone",
            "fontSize": "16px",
            "opacity": 1,
          }
        }
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Spinner component Spinner snapshot test should render correctly passing custom colors 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-gjgjzp r-justifyContent-1777fci"
  dir={null}
  style={
    {
      "backgroundColor": "rgba(255,0,0,1.00)",
      "height": "24px",
      "maxHeight": "24px",
      "maxWidth": "24px",
      "minHeight": "24px",
      "minWidth": "24px",
      "width": "24px",
    }
  }
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    style={
      {
        "transform": "rotate(0deg)",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        style={
          {
            "color": "rgba(0,0,255,1.00)",
            "fontFamily": "alldone",
            "fontSize": "16px",
            "opacity": 1,
          }
        }
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Spinner component Spinner snapshot test should render correctly passing custom sizes 1`] = `
<div
  className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-gjgjzp r-justifyContent-1777fci"
  dir={null}
  style={
    {
      "backgroundColor": "rgba(231,236,239,1.00)",
      "height": "100px",
      "maxHeight": "100px",
      "maxWidth": "100px",
      "minHeight": "100px",
      "minWidth": "100px",
      "width": "100px",
    }
  }
>
  <div
    className="css-view-g5y9jx"
    dir={null}
    style={
      {
        "transform": "rotate(0deg)",
      }
    }
  >
    <div
      className="css-view-g5y9jx"
      dir={null}
    >
      <div
        className="css-text-146c3p1"
        dir="auto"
        style={
          {
            "color": "rgba(0,127,255,1.00)",
            "fontFamily": "alldone",
            "fontSize": "70px",
            "opacity": 1,
          }
        }
      >
        
      </div>
    </div>
  </div>
</div>
`;
